# openGL_practice

./: CMakeLists.txt  README.md  main.cpp
cmakeModules/: FindGLFW3.cmake
include/: shader.h
include/glad/: glad.h
lib/: glad.c
shaders/: fragmentShader.frag  vertexShader.vert
